--- a/dom/one.html
+++ b/dom/one.html
@@ -11,7 +11,7 @@
              color: white;
         }
     </style>
-    <div class="bg-black">
+    <div  id="bg-black" class="bg-black">
         <p>
             <h1>
                 Learning DOM from chai aur code
