--- a/dom/one.html
+++ b/dom/one.html
@@ -13,8 +13,8 @@
     </style>
     <div  id="bg-black" class="bg-black">
         <p>
-            <h1>
-                Learning DOM from chai aur code
+            <h1 id="Learning">
+                Learning DOM from chai aur code . <span style="display: none;" test text</span>
             </h1>
             
         </p>
@@ -22,4 +22,10 @@
 </body>
 </html>
 
-  *SET ATTRIBUTE over-write .
+  <!--SET ATTRIBUTE over-write
+ innerText-> text which is visible
+ textcontent-> that text also visible which is hidden by user using css . ex display:none -->
+
+
+
+
