--- a/dom/two.html
+++ b/dom/two.html
@@ -33,7 +33,7 @@ const dayONe=document.querySelector(".child")
 // console.log(dayONe.innerText);
 // console.log(dayONe.parentElement);
 // console.log(dayONe.nextElementSibling);
-console.log("NODE:",parent.childNodes);
+console.log("NODE:",parent.childNodes);  // node list
 
 </script>
 </html>
